<resources>
    <string name="app_name">Wallela</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="flat_art">\t\tFlat-Art</string>
    <string name="photography">\t\tPhotography</string>
    <string name="superhero">\t\tSuperHero</string>
    <string name="contact_us">Contact Us</string>
    <string name="favorites">\t\tFavorites</string>
    <string name="category">Category</string>
    <string name="nature">\t\tNature</string>
    <string name="enter_subject">Write the Subject</string>
    <string name="message">Message</string>
    <string name="subject">Subject</string>
    <string name="say_something">Say something..</string>
    <string name="privacy_policy">Privacy policy</string>

</resources>
